apps/rapid-cmi5-electron-frontend/src/styles.css
/* You can add global styles to this file, and also import other style files */

/* style for legacy inline code */
.inline-code {
  display: inline-block;
  padding: 2px 4px;
  color: #eeeeee;
  background-color: #272822;
  border-radius: 3px;
}

.slide-link:hover {
  color: #6f96ff;
}

a {
  color: #6f96ff;
  text-decoration: none;
}

a:hover {
  color: #8cadfa;
}

a:visited {
  color: #6f96ff;
}

.toc-link:hover {
  color: #6f96ff;
}

/* Toaster */
.SnackbarItem-message {
  white-space: pre-line;
}

body {
  /*Prevents useless scrollbar from appearing when root is 100vh*/
  margin: 0;
}

div#root {
  /*background-color: rgb(252, 1, 201);*/
  overflow: hidden;
  width: auto;
  height: 100vh;
  display: flex;
}

/* Right Side */
div#app-views {
  /*background-color: rgb(246, 199, 248);*/
  display: flex;
  flex-direction: column;
  /* use 100% instead of 100vh to make this always fit within the root element */
  height: 100%;
}

/* Wraps Routes */
div#app-routes {
  display: flex;
}

/* Route Content under App Header*/
div#app-content {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

/* Align buttons to the right*/
div#button-container-right {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: flex-end;
  margin: 12;
  padding: 12;
  height: auto;
}

/* Align buttons center*/
div#button-container-center {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 12;
  padding: 12;
  height: auto;
}

/* Vertical Padding 2 ps in a row will render 12px vert space */
p {
  margin: 12px 0 0 0;
}

p:first-child {
  margin: 0;
}

/* Horizontal Padding */
div#horizontalgap {
  float: left;
  overflow: hidden;
  height: 1px;
  width: 0px;
}

/* REF  Scrollbar Styles
Moved to theme
*/

/*::-webkit-scrollbar {

}

::-webkit-scrollbar-track {

}

::-webkit-scrollbar-thumb {

}

::-webkit-scrollbar-corner {
	background-color: transparent;
}
*/

/* Activity Styles */
.paper-activity {
  padding: 4;
  margin-top: '4px';
  margin-bottom: '4px';
  margin-left: 'auto';
  margin-right: 'auto';
  border-radius: 16px;
  padding: 24px;
  box-shadow:
    0 3px 6px rgba(0, 0, 0, 0.16),
    0 3px 6px rgba(0, 0, 0, 0.23);
}

/* Form Styles */

.paper-form {
  overflow: hidden;
  border-radius: 14px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  height: auto;
  min-height: 320;
  padding: 24px;
  box-shadow:
    0 3px 6px rgba(0, 0, 0, 0.16),
    0 3px 6px rgba(0, 0, 0, 0.23);
}

.no-paper-form {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  height: auto;
  min-height: 320;
  padding: 24px;
}

.form {
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.form-fields-container {
  height: 100%;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  display: flex;
}

.content-header-text {
  overflow: clip;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-transform: uppercase;
}

.clipped-text {
  overflow: clip;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.crumb-text {
  font-size: 16px;
  overflow: clip;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-transform: capitalize;
}

/* Content style to allow a scrolled area within it */

.contentBox {
  /* top: 8px - others 12px */
  padding: 8px 12px 12px;
  height: 100%;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.footer-nav {
  margin: 8px 0px 0px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-content: center;
  align-items: center;
  width: 100%;
}

/* Dashboard Styles */

.dashboard {
  height: 100%;
  width: 100%;
  overflow-y: auto;
  display: flex;
}

.list-container {
  max-height: 100%;
  width: 100%;
  display: flex;
  height: inherit;
}

.scrollingDiv {
  height: 100%;
  width: 100%;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

.paper-card {
  background-color: rgb(0, 208, 255);
  border-radius: 12px;
  border-width: 2px;
  display: flex;
  height: 95px;
  width: 248px;
  min-height: 98px;
  min-width: 100px;
  margin: 8px;
  flex-direction: column;
  justify-content: center;
  padding: 24px;
  box-shadow:
    0 3px 6px rgba(0, 0, 0, 0.16),
    0 3px 6px rgba(0, 0, 0, 0.23);
}

.paper-card:hover {
  cursor: pointer;
}

/* List Styles */
.list-item-spread {
  min-width: 800px;
}

/* Route Content under App Header*/
.list_column {
  display: flex;
  flex-direction: column;
}

/* Modal Styles */

.paper-message {
  border-radius: 6px;
  border-width: 2px;
  display: flex;
  height: auto;
  width: 540px;
  margin: 8px 0px 8px 32px;
  flex-direction: column;
  justify-content: flex-start;
  padding: 24px;
  box-shadow:
    0 3px 6px rgba(0, 0, 0, 0.16),
    0 3px 6px rgba(0, 0, 0, 0.23);
}

.box-message {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: auto;
  min-height: 200px;
}

.content-row {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.content-row-icons {
  /* background-color:aquamarine; */
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-content: center;
  align-items: center;
  width: 100%;
}

.content-row-icons-end {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-content: center;
  align-items: center;
  width: 100%;
  /* background-color:bisque; */
}

.content-row-stretch {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-content: center;
  align-items: center;
  width: 100%;
  /* background-color:rgb(228, 224, 168); */
}

/* display: flex;
align-items: center; */
/*
.slide-rangeos {
  background-color: aqua;
  display: flex;
  flex-direction: column;
  height: auto;
  align-items: flex-start;
  width: auto;
} */

/* BlinkText.css */
@keyframes blink {
  0%,
  100% {
    opacity: 1;
  }
  50% {
    opacity: 0.3;
  }
}

.blink-animation {
  animation: blink 2s infinite; /* Adjust duration and iteration count as needed */
}

/* You can add global styles to this file, and also import other style files */

@tailwind base;
@tailwind components;
@tailwind utilities;

.btn-rangeos {
  @apply bg-blue-500 text-white font-bold py-1 px-4 rounded transition-all duration-300 ease-in-out transform;
}

.btn-rangeos:hover {
  @apply bg-blue-600 shadow-lg;
}

.btn-rangeos:active {
  @apply bg-blue-700 scale-95;
}

.option-rangeos {
  @apply rounded-xl my-4 px-6 prose-p:my-0 prose-li:my-0 prose-h1:my-1 prose-h2:my-1 py-2;
}
.slide-rangeos {
  @apply prose prose-invert prose-xl w-full;
}
.test {
  @apply bg-blue-700;
}

